deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketbase
  labels:
    app: pocketbase
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
spec:
  selector:
    matchLabels:
      app: pocketbase
  template:
    metadata:
      labels:
        app: pocketbase
    spec:
      containers:
      - name: pocketbase
        image: jfrog.it-academy.by/public/shvedov/pocketbase:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
            - name: pocketbase-nfs
              mountPath: /pb/pb_data
      volumes:
        - name: pocketbase-nfs
          nfs:
            server: 192.168.37.105
            path: /mnt/IT-Academy/nfs-data/sa2-28-24/v_shvedov/pocketbase

---
apiVersion: v1
kind: Service
metadata:
  name: pocketbase-service
  labels:
    run: pocketbase-service
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: pocketbase
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sa-pocketbase
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "pb.k8s-11.sa"
spec:
  ingressClassName: nginx
  rules:
    - host: pb.k8s-11.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocketbase-service
                port:
                  number: 8080
